feat: adicionando tabela na página home

--- a/frontend/home/index.html
+++ b/frontend/home/index.html
@@ -26,6 +26,23 @@
                 </li>
             </ul>
         </nav>
+
+        <div id="content">
+            <b>
+                <h1>Automóveis</h1>
+            </b>
+            <table id="carrosTable">
+                <tr>
+                    <th>ID</th>
+                    <th>Marca</th>
+                    <th>Modelo</th>
+                    <th>Ano</th>
+                    <th>Cor</th>
+                    <th>Placa</th>
+                    <th>Ações</th>
+                </tr>
+            </table>
+        </div>
     </div>
 
 </body>
