--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -8,7 +8,7 @@
   <!-- Link of Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-  <title>Document</title>
+  <title>Selenium Test - Cadastro</title>
 </head>
 <body>
   <h1>Página de registro</h1>
