:construction: Feat: create first element of sidebar

--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -11,6 +11,16 @@
   <title>Selenium Test - Cadastro</title>
 </head>
 <body>
-  <h1>Página de registro</h1>
+  <div>
+    <nav>
+      <ul>
+        <li>
+          <a href="../home/index.html">
+            <span class="icon"><i class="bi bi-card-checklist"></i></span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </body>
 </html>
