:construction: Feat: create last element of sidebar

--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -19,6 +19,12 @@
             <span class="icon"><i class="bi bi-card-checklist"></i></span>
           </a>
         </li>
+
+        <li class="item-menu active">
+          <a href="#">
+              <span class="icon"><i class="bi bi-plus-square"></i></span>
+          </a>
+      </li>
       </ul>
     </nav>
   </div>
