--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -1,32 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Link of Bootstrap Icons -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <!-- Link of Bootstrap Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
 
-  <title>Selenium Test - Cadastro</title>
-</head>
-<body>
-  <div>
-    <nav>
-      <ul>
-        <li>
-          <a href="../home/index.html">
-            <span class="icon"><i class="bi bi-card-checklist"></i></span>
-          </a>
-        </li>
+    <title>Selenium Test - Cadastro</title>
+  </head>
+  <body>
+    <div>
+      <nav>
+        <ul>
+          <li>
+            <a href="../home/index.html">
+              <span><i class="bi bi-card-checklist"></i></span>
+            </a>
+          </li>
 
-        <li class="item-menu active">
-          <a href="#">
-              <span class="icon"><i class="bi bi-plus-square"></i></span>
-          </a>
-      </li>
-      </ul>
-    </nav>
-  </div>
-</body>
+          <li class="">
+            <a href="#">
+              <span><i class="bi bi-plus-square"></i></span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <div>
+        <b>
+          <h1>CADASTRAR</h1>
+        </b>
+        <div>
+          <form>
+            <div>
+              <label for="marca">Marca:</label>
+              <input type="text" id="marca" name="marca" required />
+            </div>
+            <div>
+              <label for="modelo">Modelo:</label>
+              <input type="text" id="modelo" name="modelo" required />
+            </div>
+            <div>
+              <label for="ano">Ano:</label>
+              <input type="number" id="ano" name="ano" required />
+            </div>
+            <div>
+              <label for="cor">Cor:</label>
+              <input type="text" id="cor" name="cor" required />
+            </div>
+            <div>
+              <label for="placa">Placa:</label>
+              <input type="text" id="placa" name="placa" required />
+            </div>
+            <div>
+              <button type="submit">Cadastrar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
