--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -11,6 +11,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
 
+    <!-- Link of page styles -->
+    <link rel="stylesheet" href="./styles.css" />
+
     <title>Selenium Test - Cadastro</title>
   </head>
   <body>
