--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -16,50 +16,57 @@
 
     <title>Selenium Test - Cadastro</title>
   </head>
+
   <body>
-    <div>
-      <nav>
+    <div class="container">
+      <nav class="menu">
         <ul>
-          <li>
+          <li class="item-menu">
             <a href="../home/index.html">
-              <span><i class="bi bi-card-checklist"></i></span>
+              <span class="icon"><i class="bi bi-card-checklist"></i></span>
             </a>
           </li>
 
-          <li class="">
+          <li class="item-menu active">
             <a href="#">
-              <span><i class="bi bi-plus-square"></i></span>
+              <span class="icon"><i class="bi bi-plus-square"></i></span>
             </a>
           </li>
         </ul>
       </nav>
 
-      <div>
+      <div id="content">
         <b>
           <h1>CADASTRAR</h1>
         </b>
-        <div>
+
+        <div class="divForm">
           <form id="carForm">
             <div>
               <label for="marca">Marca:</label>
               <input type="text" id="marca" name="marca" required />
             </div>
+
             <div>
               <label for="modelo">Modelo:</label>
               <input type="text" id="modelo" name="modelo" required />
             </div>
+
             <div>
               <label for="ano">Ano:</label>
               <input type="number" id="ano" name="ano" required />
             </div>
+
             <div>
               <label for="cor">Cor:</label>
               <input type="text" id="cor" name="cor" required />
             </div>
+
             <div>
               <label for="placa">Placa:</label>
               <input type="text" id="placa" name="placa" required />
             </div>
+
             <div>
               <button type="submit">Cadastrar</button>
             </div>
